Fix modal header on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -664,8 +664,10 @@ img.terrain.undiscovered {
   backdrop-filter: blur(16px);
 
   @media (max-width: 768px) {
+    padding-top: 25px !important;
+
     .close-button {
-      top: 27px;
+      top: 50px;
     }
   }
 
